math-core/tests/snapshots/error_test__unclosed_brace.snap
---
source: math-core/tests/error_test.rs
expression: "{"
---
Position: 1
UnclosedGroup(
    GroupEnd,
)
