math-core/tests/snapshots/error_test__unclosed_bracket.snap
---
source: math-core/tests/error_test.rs
expression: "\\sqrt[lim"
---
Position: 9
UnclosedGroup(
    SquareBracketClose,
)
