math-core/tests/snapshots/error_test__unclosed_env.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{matrix} x"
---
Position: 16
UnclosedGroup(
    End,
)
