math-core/tests/snapshots/error_test__unclosed_left.snap
---
source: math-core/tests/error_test.rs
expression: "\\left( x"
---
Position: 8
UnclosedGroup(
    Right,
)
