math-core/tests/snapshots/error_test__unclosed_text.snap
---
source: math-core/tests/error_test.rs
expression: "\\text{hello"
---
Position: 11
UnexpectedEOF
