math-core/tests/snapshots/error_test__unicode_command.snap
---
source: math-core/tests/error_test.rs
expression: "\\éx"
---
Position: 0
UnknownCommand(
    "é",
)
