math-core/tests/snapshots/error_test__unsupported_command.snap
---
source: math-core/tests/error_test.rs
expression: "\\asdf"
---
Position: 0
UnknownCommand(
    "asdf",
)
