math-core/tests/snapshots/error_test__unsupported_environment.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{xmatrix} 1 \\end{xmatrix}"
---
Position: 6
UnknownEnvironment(
    "xmatrix",
)
