math-core/tests/snapshots/error_test__unsupported_not.snap
---
source: math-core/tests/error_test.rs
expression: "\\not\\text{hello}"
---
Position: 0
CannotBeUsedHere {
    got: Not,
    correct_place: BeforeSomeOps,
}
