math-core/tests/snapshots/error_test__wrong_opening_paren.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin[matrix} x \\end{matrix}"
---
Position: 6
DisallowedChar(
    '[',
)
